Fixes bug 66181.  Content-Disposition with attachment=filename did not accept a quoted-string as the filename.  r=gagan, sr=mscott.